--- a/sass/components/_7footer.scss
+++ b/sass/components/_7footer.scss
@@ -5,8 +5,7 @@
   height: 252px;
 
   &__container {
-    width: 1200px;
-    margin: 0 auto;
+    @extend .container;
     position: relative;
     z-index: 1;
     display: flex;
@@ -93,25 +92,22 @@
   }
 
   &__button-icon {
-    background: var(--blue);
-    box-shadow: var(--shadow);
-    border-radius: 4px;
-    width: 200px;
-    height: 50px;
+    @extend .button-theme;
     color: var(--button-color);
     border-color: var(--blue);
-    cursor: pointer;
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-weight: 700;
     line-height: 30px;
-    letter-spacing: 0.06em;
     text-align: left;
     padding-left: 42px;
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M24 0L0 13.5L7.66994 16.3407L19.5 5.25002L10.5017 17.3896L10.509 17.3923L10.5 17.3896V24.0001L14.8013 18.982L20.2501 21.0001L24 0Z' fill='white'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
     background-position-x: 148px;
     background-position-y: 12px;
+    &:focus,
+    &:hover {
+      color: var(--black);
+      border-color: var(--blue);
+      transition: var(--animation);
+    }
   }
 }
 
