--- a/sass/components/_4offer.scss
+++ b/sass/components/_4offer.scss
@@ -3,8 +3,7 @@
   background: var(--white);
 
   &__container {
-    width: 1200px;
-    margin: 0 auto;
+@extend .container;
     position: relative;
     z-index: 1;
   }
