--- a/sass/components/_6customers.scss
+++ b/sass/components/_6customers.scss
@@ -4,8 +4,7 @@
   background: var(--white);
 
   &__container {
-    width: 1200px;
-    margin: 0 auto;
+    @extend .container;
     position: relative;
     z-index: 1;
   }
