--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -164,30 +164,18 @@ input {
 }
 
 .modal__button-send {
-  width: 200px;
-  height: 50px;
-  color: var(--white);
-  font-family: 'Roboto';
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0.06em;
+  @extend .button-theme;
   text-align: center;
-  background: var(--blue);
-  box-shadow: var(--shadow);
-  border-radius: 4px;
   border: none;
-  cursor: pointer;
+  color: var(--white);
   margin-top: 30px;
   margin-left: 164px;
   margin-right: 164px;
 
-  &:hover,
-  &:focus {
-    background: var(--button-color);
-    color: var(--blue);
+  &:focus,
+  &:hover {
+    color: var(--black);
     border-color: var(--blue);
-    border: double;
     transition: var(--animation);
   }
 }
