--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/logo';
 @import './components/0general';
 @import './components/1header';
 @import './components/2slider';
@@ -9,4 +10,4 @@
 @import './components/7footer';
 @import './components/modal-window';
 @import './components/portfolio-buttons';
-@import './components/portfolio-products'
+@import './components/portfolio-products';
