--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -5,57 +5,30 @@
   justify-content: center;
   gap: 8px;
   margin-top: 94px;
-}
 
-.button__element--style {
-  border-radius: 4px;
-  background-color: var(--button-color);
-  color: var(--black-second);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.63;
-  letter-spacing: 0.03em;
-  text-align: center;
-  border: none;
-}
+  &--theme {
+    border-radius: 4px;
+    background-color: var(--button-color);
+    color: var(--black-second);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.63;
+    letter-spacing: 0.03em;
+    text-align: center;
+    border: none;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 6px;
+    padding-bottom: 6px;
 
-.button__first {
-  width: 121px;
-  height: 38px;
-}
-
-.button__second {
-  width: 93px;
-  height: 38px;
-}
-
-.button__third {
-  width: 114px;
-  height: 38px;
-}
-
-.button__fourth {
-  width: 91px;
-  height: 38px;
-}
-.button__fifth {
-  width: 121px;
-  height: 38px;
-}
-.button__first:hover,
-.button__first:focus,
-.button__second:hover,
-.button__second:focus,
-.button__third:hover,
-.button__third:focus,
-.button__fourth:hover,
-.button__fourth:focus,
-.button__fifth:hover,
-.button__fifth:focus {
-  background-color: var(--blue);
-  color: var(--white);
-  cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+    &:hover,
+    &:focus {
+      background-color: var(--blue);
+      color: var(--white);
+      cursor: pointer;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+      border-radius: 4px;
+    }
+  }
 }
