--- a/sass/components/_6customers.scss
+++ b/sass/components/_6customers.scss
@@ -1,7 +1,7 @@
 /* <!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --> */
 
 .customers {
-  background: var(--white);
+  background: $white;
 
   &__container {
     @extend .container;
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    fill: #afb1b8;
+    fill: $white-third;
     gap: 30px;
     margin-bottom: 94px;
   }
@@ -23,7 +23,7 @@
     font-weight: 700;
     line-height: 1.16;
     letter-spacing: 0.03em;
-    color: var(--black-second);
+    color: $black-second;
     text-align: center;
     padding-top: 94px;
   }
@@ -31,14 +31,14 @@
   &__icon {
     height: 92px;
     width: 170px;
-    border: 1px solid #afb1b8;
+    border: 1px solid $white-third;
     border-radius: 4px;
 
     &:hover,
     &:focus {
-      fill: var(--blue);
-      border-color: var(--blue);
-      transition: var(--animation);
+      fill: $blue;
+      border-color: $blue;
+      transition: $animation;
       cursor: pointer;
     }
   }
