--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,5 @@
-:root {
-  --white: #ffffff;
-  --white-second: #eeeeee;
-  --black: #000000;
-  --black-second: #212121;
-  --gray-second: #2f303a;
-  --gray-footer: rgba(255, 255, 255, 0.6);
-  --gray: #757575;
-  --button-color: #f5f4fa;
-  --blue: #2196f3;
-  --slider-color: rgba(47, 48, 58, 0.4);
-  --shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  --animation: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  --social-background: rgba(255, 255, 255, 0.1);
-}
-
 .logo--color-footer {
-  color: var(--white);
+  color: #ffffff;
 }
 
 .logo {
@@ -31,11 +15,11 @@
   line-height: 1.19;
   font-weight: 700;
   letter-spacing: 0.03em;
-  color: var(--black);
+  color: #000000;
   padding-right: 47px;
 }
 .logo--color {
-  color: var(--blue);
+  color: #2196f3;
 }
 
 * {
@@ -47,7 +31,7 @@ body {
   font-family: "Roboto";
   font-style: normal;
   letter-spacing: 0.03em;
-  color: var(--gray);
+  color: #757575;
 }
 
 h2 {
@@ -99,9 +83,9 @@ ul {
 }
 
 .button-theme, .modal__button-send, .footer__button-icon, .slider__button {
-  background: var(--blue);
-  -webkit-box-shadow: var(--shadow);
-          box-shadow: var(--shadow);
+  background: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
@@ -174,7 +158,7 @@ ul {
   position: relative;
   margin: 2px;
   text-decoration: none;
-  color: var(--black-second);
+  color: #212121;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,23 +167,23 @@ ul {
           align-items: center;
 }
 .link:hover, .link:focus {
-  color: var(--blue);
+  color: #2196f3;
 }
 .link__icon-email {
   width: 16px;
   height: 12px;
   margin-right: 10px;
-  fill: var(--gray);
+  fill: #757575;
 }
 .link__icon-phone {
   width: 10px;
   height: 16px;
   margin-right: 10px;
-  fill: var(--gray);
+  fill: #757575;
 }
 
 .active {
-  color: var(--blue);
+  color: #2196f3;
 }
 .active::after {
   content: "";
@@ -207,7 +191,7 @@ ul {
   width: 100%;
   height: 4px;
   margin-top: 28px;
-  background: var(--blue);
+  background: #2196f3;
   border-radius: 2px;
   position: absolute;
   top: 100%;
@@ -218,7 +202,7 @@ ul {
   text-decoration: none;
   position: relative;
   margin: 2px;
-  color: var(--gray);
+  color: #757575;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -227,13 +211,13 @@ ul {
           align-items: center;
 }
 .link--gray:hover svg {
-  fill: var(--blue);
-  color: var(--blue);
+  fill: #2196f3;
+  color: #2196f3;
 }
 
 /* <!-- E F F E C T I V E  S O L U T I O N S --><!-- E F F E C T I V E  S O L U T I O N S --><!-- E F F E C T I V E  S O L U T I O N S --><!-- E F F E C T I V E  S O L U T I O N S --> */
 .slider {
-  background: var(--gray-second);
+  background: #2f303a;
   text-align: center;
   height: 600px;
   background-image: url("../images/img.png");
@@ -252,26 +236,26 @@ ul {
   font-weight: 900;
   line-height: 1.36;
   letter-spacing: 0.06em;
-  color: var(--white);
+  color: #ffffff;
   text-align: center;
   padding-top: 200px;
   padding-bottom: 30px;
 }
 .slider__button {
   left: 700px;
-  color: var(--white);
+  color: #ffffff;
 }
 .slider__button:focus, .slider__button:hover {
-  color: var(--black);
-  border-color: var(--blue);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  color: #000000;
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 .slider::after {
   content: "";
   width: 100%;
   height: 600px;
-  background: var(--slider-color);
+  background: rgba(47, 48, 58, 0.4);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -281,7 +265,7 @@ ul {
 
 /* <!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --> */
 .article {
-  background: var(--white);
+  background: #ffffff;
 }
 .article__container {
   position: relative;
@@ -302,19 +286,19 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  color: var(--black-second);
+  color: #212121;
 }
 .article__summary {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--gray);
+  color: #757575;
 }
 
 /* <!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --> */
 .offer {
-  background: var(--white);
+  background: #ffffff;
 }
 .offer__container {
   position: relative;
@@ -325,7 +309,7 @@ ul {
   font-weight: 700;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  color: var(--black-second);
+  color: #212121;
   text-align: center;
   padding-top: 94px;
 }
@@ -353,12 +337,12 @@ ul {
   bottom: 0;
   width: 100%;
   background: rgba(47, 48, 58, 0.8);
-  color: var(--white);
+  color: #ffffff;
 }
 
 /* <!-- O U R  T E A M --><!-- O U R  T E A M --><!-- O U R  T E A M --><!-- O U R  T E A M --> */
 .team {
-  background: var(--button-color);
+  background: #f5f4fa;
 }
 .team__container {
   position: relative;
@@ -369,7 +353,7 @@ ul {
   font-weight: 700;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  color: var(--black-second);
+  color: #212121;
   text-align: center;
   padding-top: 94px;
 }
@@ -384,7 +368,7 @@ ul {
   padding-bottom: 94px;
 }
 .team__card {
-  background: var(--white);
+  background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -395,10 +379,10 @@ ul {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-  color: var(--black-second);
+  color: #212121;
 }
 .team__spec {
-  color: var(--gray);
+  color: #757575;
   font-weight: 400;
   margin-bottom: 16px;
 }
@@ -427,7 +411,7 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 10px;
-  background-color: var(--white);
+  background-color: #ffffff;
 }
 .social__icon {
   width: 40px;
@@ -436,16 +420,16 @@ ul {
   border-radius: 50%;
 }
 .social__icon:hover {
-  background-color: var(--blue);
+  background-color: #2196f3;
   cursor: pointer;
-  fill: var(--white);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  fill: #ffffff;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 /* <!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --><!-- C U S T O M E R S --> */
 .customers {
-  background: var(--white);
+  background: #ffffff;
 }
 .customers__container {
   position: relative;
@@ -470,7 +454,7 @@ ul {
   font-weight: 700;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  color: var(--black-second);
+  color: #212121;
   text-align: center;
   padding-top: 94px;
 }
@@ -481,16 +465,16 @@ ul {
   border-radius: 4px;
 }
 .customers__icon:hover, .customers__icon:focus {
-  fill: var(--blue);
-  border-color: var(--blue);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  fill: #2196f3;
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   cursor: pointer;
 }
 
 /* <!-- F O O T E R  --><!-- F O O T E R  --><!-- F O O T E R  --><!-- F O O T E R  --> */
 .footer {
-  background-color: var(--gray-second);
+  background-color: #2f303a;
   height: 252px;
 }
 .footer__container {
@@ -509,7 +493,7 @@ ul {
   line-height: 1.19;
   font-weight: 700;
   letter-spacing: 0.03em;
-  color: var(--black);
+  color: #000000;
   padding-right: 47px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -526,7 +510,7 @@ ul {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--white);
+  color: #ffffff;
 }
 .footer__social {
   display: -webkit-box;
@@ -538,15 +522,15 @@ ul {
 .footer__social-icon {
   width: 40px;
   height: 40px;
-  fill: #afb1b8;
+  fill: #ffffff;
   border-radius: 50%;
-  background-color: var(--social-background);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .footer__social-icon:hover {
-  fill: var(--white);
-  background: var(--blue);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  fill: #ffffff;
+  background: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   cursor: pointer;
 }
 .footer__textarea {
@@ -555,13 +539,13 @@ ul {
   padding-top: 16px;
   width: 358px;
   height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-filter: drop-shadow(var(--shadow));
-          filter: drop-shadow(var(--shadow));
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   resize: none;
-  background: var(--gray-second);
-  color: var(--gray-footer);
+  background: #2f303a;
+  color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
 }
 .footer__textarea::-webkit-input-placeholder {
@@ -571,7 +555,7 @@ ul {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.03em;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
 }
 .footer__textarea::-moz-placeholder {
   font-family: "Roboto";
@@ -580,7 +564,7 @@ ul {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.03em;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
 }
 .footer__textarea:-ms-input-placeholder {
   font-family: "Roboto";
@@ -589,7 +573,7 @@ ul {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.03em;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
 }
 .footer__textarea::-ms-input-placeholder {
   font-family: "Roboto";
@@ -598,7 +582,7 @@ ul {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.03em;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
 }
 .footer__textarea::placeholder {
   font-family: "Roboto";
@@ -607,15 +591,15 @@ ul {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: 0.03em;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
 }
 .footer__button {
   margin-top: 50px;
   margin-left: -60px;
 }
 .footer__button-icon {
-  color: var(--button-color);
-  border-color: var(--blue);
+  color: #f5f4fa;
+  border-color: #2196f3;
   line-height: 30px;
   text-align: left;
   padding-left: 42px;
@@ -625,10 +609,10 @@ ul {
   background-position-y: 12px;
 }
 .footer__button-icon:focus, .footer__button-icon:hover {
-  color: var(--black);
-  border-color: var(--blue);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  color: #000000;
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .address {
@@ -639,22 +623,22 @@ ul {
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   padding-top: 9px;
-  color: var(--white);
+  color: #ffffff;
 }
 .address__item--color {
   text-decoration: none;
-  color: var(--gray-footer);
+  color: rgba(255, 255, 255, 0.6);
   font-style: normal;
 }
 .address__item--color:hover, .address__item--color:focus {
-  color: var(--white);
+  color: #ffffff;
 }
 
 .logo--color-footer {
-  color: var(--white);
+  color: #ffffff;
 }
 
 /* <!-- M O D A L  W I N D O W  --><!-- M O D A L  W I N D O W  --><!-- M O D A L  W I N D O W  --><!-- M O D A L  W I N D O W  --> */
@@ -676,7 +660,7 @@ label {
   text-align: left;
 }
 label:focus-within svg {
-  fill: var(--blue);
+  fill: #2196f3;
 }
 
 input {
@@ -686,18 +670,18 @@ input {
   border-radius: 4px;
   background: none;
   border-radius: 4px;
-  border: 1px solid var(--blackho);
+  border: 1px solid #212121;
   padding-left: 42px;
 }
 input:focus {
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
-  border-color: var(--blue);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  border-color: #2196f3;
   outline: none;
 }
 input:checked::before {
-  background-color: var(--blue);
-  border: 1px solid var(--blue);
+  background-color: #2196f3;
+  border: 1px solid #2196f3;
   background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z' fill='%23fff' stroke='%23fff' stroke-width='.2'/%3E%3C/svg%3E");
   background-repeat: none;
   background-position: center;
@@ -711,8 +695,8 @@ input:checked::before {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   z-index: 2;
 }
 
@@ -720,8 +704,8 @@ input:checked::before {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .modal__content {
@@ -730,7 +714,7 @@ input:checked::before {
   width: 528px;
   height: 581px;
   border-radius: 4px;
-  background-color: var(--white);
+  background-color: #ffffff;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -744,7 +728,7 @@ input:checked::before {
   margin-top: 8px;
   width: 30px;
   height: 30px;
-  background: var(--white);
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: -webkit-box;
@@ -765,9 +749,9 @@ input:checked::before {
   cursor: pointer;
 }
 .modal__button-close-icon:hover, .modal__button-close-icon:focus {
-  fill: var(--blue);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  fill: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .modal__heading {
@@ -777,7 +761,7 @@ input:checked::before {
   line-height: 23px;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--black-second);
+  color: #212121;
   margin-top: 2px;
   margin-bottom: 12px;
 }
@@ -823,16 +807,16 @@ input:checked::before {
   color: rgba(117, 117, 117, 0.5);
 }
 .modal__textarea:focus {
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
-  border-color: var(--blue);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  border-color: #2196f3;
   outline: none;
 }
 
 .modal__bottom-text--link:hover {
   display: inline-block;
   text-decoration: underline;
-  color: var(--blue);
+  color: #2196f3;
   cursor: pointer;
 }
 
@@ -844,16 +828,16 @@ input:checked::before {
 .modal__button-send {
   text-align: center;
   border: none;
-  color: var(--white);
+  color: #ffffff;
   margin-top: 30px;
   margin-left: 164px;
   margin-right: 164px;
 }
 .modal__button-send:focus, .modal__button-send:hover {
-  color: var(--black);
-  border-color: var(--blue);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  color: #000000;
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .modal__bottom-text {
@@ -879,7 +863,7 @@ input:checked::before {
   height: 15px;
   border: 1px solid black;
   border-radius: 1px;
-  background-color: var(--white);
+  background-color: #ffffff;
 }
 
 /*  <!-- B U T T O N S  --> <!-- B U T T O N S  --> <!-- B U T T O N S  --> <!-- B U T T O N S  --> */
@@ -895,8 +879,8 @@ input:checked::before {
 }
 .button-list--theme {
   border-radius: 4px;
-  background-color: var(--button-color);
-  color: var(--black-second);
+  background-color: #f5f4fa;
+  color: #212121;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.63;
@@ -909,8 +893,8 @@ input:checked::before {
   padding-bottom: 6px;
 }
 .button-list--theme:hover, .button-list--theme:focus {
-  background-color: var(--blue);
-  color: var(--white);
+  background-color: #2196f3;
+  color: #ffffff;
   cursor: pointer;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -919,7 +903,7 @@ input:checked::before {
 
 /* <!-- P I C T U R E S  --> <!-- P I C T U R E S  --> <!-- P I C T U R E S  --> <!-- P I C T U R E S  --> */
 .products {
-  background: var(--white);
+  background: #ffffff;
 }
 .products__container {
   position: relative;
@@ -936,8 +920,8 @@ input:checked::before {
   gap: 30px;
 }
 .products__picture {
-  background: var(--white);
-  border: 1px solid var(--white-second);
+  background: #ffffff;
+  border: 1px solid #eeeeee;
   position: relative;
 }
 .products__picture:hover, .products__picture:focus {
@@ -957,10 +941,10 @@ input:checked::before {
   height: 100%;
   -webkit-transform: translatey(100%);
           transform: translatey(100%);
-  -webkit-transition: var(--animation);
-  transition: var(--animation);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   background: rgba(33, 150, 243, 0.9);
-  color: var(--white);
+  color: #ffffff;
   padding-left: 24px;
   padding-top: 49px;
   padding-right: 46px;
@@ -980,7 +964,7 @@ input:checked::before {
   font-weight: 700;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--black-second);
+  color: #212121;
 }
 .products__summary {
   padding-left: 24px;
@@ -989,7 +973,7 @@ input:checked::before {
   font-weight: 400;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  color: var(--gray);
+  color: #757575;
 }
 .products__box:hover .products__slider {
   -webkit-transform: translate(0);
