--- a/sass/components/_0general.scss
+++ b/sass/components/_0general.scss
@@ -7,7 +7,7 @@ body {
   font-family: 'Roboto';
   font-style: normal;
   letter-spacing: 0.03em;
-  color: var(--gray);
+  color: $gray;
 }
 
 h2 {
@@ -50,8 +50,8 @@ ul {
 }
 
 .button-theme {
-  background: var(--blue);
-  box-shadow: var(--shadow);
+  background: $blue;
+  box-shadow: $shadow;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
