--- a/sass/components/_1header.scss
+++ b/sass/components/_1header.scss
@@ -47,31 +47,31 @@
   position: relative;
   margin: 2px;
   text-decoration: none;
-  color: var(--black-second);
+  color: $black-second;
   display: flex;
   align-items: center;
   &:hover,
   &:focus {
-    color: var(--blue);
+    color: $blue;
   }
 
   &__icon-email {
     width: 16px;
     height: 12px;
     margin-right: 10px;
-    fill: var(--gray);
+    fill: $gray;
   }
 
   &__icon-phone {
     width: 10px;
     height: 16px;
     margin-right: 10px;
-    fill: var(--gray);
+    fill: $gray;
   }
 }
 
 .active {
-  color: var(--blue);
+  color: $blue;
 
   &::after {
     content: '';
@@ -79,7 +79,7 @@
     width: 100%;
     height: 4px;
     margin-top: 28px;
-    background: var(--blue);
+    background: $blue;
     border-radius: 2px;
     position: absolute;
     top: 100%;
@@ -91,12 +91,12 @@
   text-decoration: none;
   position: relative;
   margin: 2px;
-  color: var(--gray);
+  color: $gray;
   display: flex;
   align-items: center;
 
   &:hover svg {
-    fill: var(--blue);
-    color: var(--blue);
+    fill: $blue;
+    color: $blue;
   }
 }
