--- a/sass/components/_3article.scss
+++ b/sass/components/_3article.scss
@@ -1,7 +1,7 @@
 /* <!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --><!-- L O R E M  I P S U M --> */
 
 .article {
-  background: var(--white);
+  background: $white;
 
   &__container {
     @extend .container;
@@ -24,7 +24,7 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    color: var(--black-second);
+    color: $black-second;
   }
 
   &__summary {
@@ -32,6 +32,6 @@
     font-weight: 400;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--gray);
+    color: $gray;
   }
 }
