--- a/sass/components/_4offer.scss
+++ b/sass/components/_4offer.scss
@@ -1,18 +1,19 @@
 /* <!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --><!-- W H A T  W E  D O --> */
 .offer {
-  background: var(--white);
+  background: $white;
 
   &__container {
-@extend .container;
+    @extend .container;
     position: relative;
     z-index: 1;
   }
+
   &__heading {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.16;
     letter-spacing: 0.03em;
-    color: var(--black-second);
+    color: $black-second;
     text-align: center;
     padding-top: 94px;
   }
@@ -38,7 +39,7 @@
     padding: 30px 0px;
     bottom: 0;
     width: 100%;
-    background: rgba(47, 48, 58, 0.8);
-    color: var(--white);
+    background: $offer-color;
+    color: $white;
   }
 }
