--- a/sass/components/_5team.scss
+++ b/sass/components/_5team.scss
@@ -1,7 +1,7 @@
 /* <!-- O U R  T E A M --><!-- O U R  T E A M --><!-- O U R  T E A M --><!-- O U R  T E A M --> */
 
 .team {
-  background: var(--button-color);
+  background: $button-color;
 
   &__container {
     @extend .container;
@@ -14,7 +14,7 @@
     font-weight: 700;
     line-height: 1.16;
     letter-spacing: 0.03em;
-    color: var(--black-second);
+    color: $black-second;
     text-align: center;
     padding-top: 94px;
   }
@@ -27,9 +27,8 @@
   }
 
   &__card {
-    background: var(--white);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
+    background: $white;
+    box-shadow: $shadow-team;
     border-radius: 0px 0px 4px 4px;
     text-align: center;
   }
@@ -39,11 +38,11 @@
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
-    color: var(--black-second);
+    color: $black-second;
   }
 
   &__spec {
-    color: var(--gray);
+    color: $gray;
     font-weight: 400;
     margin-bottom: 16px;
   }
@@ -61,20 +60,20 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
-    background-color: var(--white);
+    background-color: $white;
   }
 
   &__icon {
     width: 40px;
     height: 40px;
-    fill: #afb1b8;
+    fill: $white-third;
     border-radius: 50%;
 
     &:hover {
-      background-color: var(--blue);
+      background-color: $blue;
       cursor: pointer;
-      fill: var(--white);
-      transition: var(--animation);
+      fill: $white;
+      transition: $animation;
     }
   }
 }
