--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -18,7 +18,7 @@ label {
   text-align: left;
 
   &:focus-within svg {
-    fill: var(--blue);
+    fill: $blue;
   }
 }
 input {
@@ -28,18 +28,18 @@ input {
   border-radius: 4px;
   background: none;
   border-radius: 4px;
-  border: 1px solid var(--blackho);
+  border: 1px solid $black-second;
   padding-left: 42px;
 
   &:focus {
-    transition: var(--animation);
-    border-color: var(--blue);
+    transition: $animation;
+    border-color: $blue;
     outline: none;
   }
 
   &:checked::before {
-    background-color: var(--blue);
-    border: 1px solid var(--blue);
+    background-color: $blue;
+    border: 1px solid $blue;
     background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z' fill='%23fff' stroke='%23fff' stroke-width='.2'/%3E%3C/svg%3E");
     background-repeat: none;
     background-position: center;
@@ -53,8 +53,8 @@ input {
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  transition: var(--animation);
+  background: $backdrop-color;
+  transition: $animation;
   z-index: 2;
 }
 
@@ -62,7 +62,7 @@ input {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: var(--animation);
+  transition: $animation;
 }
 
 .modal__content {
@@ -71,12 +71,11 @@ input {
   width: 528px;
   height: 581px;
   border-radius: 4px;
-  background-color: var(--white);
+  background-color: $white;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: $shadow-modal;
 }
 
 .modal__button-close {
@@ -84,8 +83,8 @@ input {
   margin-top: 8px;
   width: 30px;
   height: 30px;
-  background: var(--white);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: $white;
+  border: 1px solid $modal-close-color;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -100,8 +99,8 @@ input {
 
   &:hover,
   &:focus {
-    fill: var(--blue);
-    transition: var(--animation);
+    fill: $blue;
+    transition: $animation;
   }
 }
 
@@ -112,14 +111,14 @@ input {
   line-height: 23px;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--black-second);
+  color: $black-second;
   margin-top: 2px;
   margin-bottom: 12px;
 }
 
 .modal__input {
   outline: none;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid $modal-color;
 }
 
 .modal__input-icon {
@@ -135,18 +134,18 @@ input {
   position: relative;
   width: 448px;
   height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid $modal-color;
   border-radius: 4px;
   resize: none;
-  color: rgba(117, 117, 117, 0.5);
+  color: $modal-color-second;
 
   &::placeholder {
-    color: rgba(117, 117, 117, 0.5);
+    color: $modal-color-second;
   }
 
   &:focus {
-    transition: var(--animation);
-    border-color: var(--blue);
+    transition: $animation;
+    border-color: $blue;
     outline: none;
   }
 }
@@ -154,7 +153,7 @@ input {
 .modal__bottom-text--link:hover {
   display: inline-block;
   text-decoration: underline;
-  color: var(--blue);
+  color: $blue;
   cursor: pointer;
 }
 
@@ -167,16 +166,16 @@ input {
   @extend .button-theme;
   text-align: center;
   border: none;
-  color: var(--white);
+  color: $white;
   margin-top: 30px;
   margin-left: 164px;
   margin-right: 164px;
 
   &:focus,
   &:hover {
-    color: var(--black);
-    border-color: var(--blue);
-    transition: var(--animation);
+    color: $black;
+    border-color: $blue;
+    transition: $animation;
   }
 }
 
@@ -201,6 +200,6 @@ input {
     height: 15px;
     border: 1px solid black;
     border-radius: 1px;
-    background-color: var(--white);
+    background-color: $white;
   }
 }
