--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -8,8 +8,8 @@
 
   &--theme {
     border-radius: 4px;
-    background-color: var(--button-color);
-    color: var(--black-second);
+    background-color: $button-color;
+    color: $black-second;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.63;
@@ -23,11 +23,10 @@
 
     &:hover,
     &:focus {
-      background-color: var(--blue);
-      color: var(--white);
+      background-color: $blue;
+      color: $white;
       cursor: pointer;
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+      box-shadow: $shadow-button;
       border-radius: 4px;
     }
   }
