--- a/sass/components/_portfolio-products.scss
+++ b/sass/components/_portfolio-products.scss
@@ -1,6 +1,6 @@
 /* <!-- P I C T U R E S  --> <!-- P I C T U R E S  --> <!-- P I C T U R E S  --> <!-- P I C T U R E S  --> */
 .products {
-  background: var(--white);
+  background: $white;
 
   &__container {
     @extend .container;
@@ -17,14 +17,13 @@
   }
 
   &__picture {
-    background: var(--white);
-    border: 1px solid var(--white-second);
+    background: $white;
+    border: 1px solid $white-second;
     position: relative;
 
     &:hover,
     &:focus {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+      box-shadow: $shadow-portfolio;
     }
   }
 
@@ -41,9 +40,9 @@
     width: 100%;
     height: 100%;
     transform: translatey(100%);
-    transition: var(--animation);
-    background: rgba(33, 150, 243, 0.9);
-    color: var(--white);
+    transition: $animation;
+    background: $portfolio;
+    color: $white;
     padding-left: 24px;
     padding-top: 49px;
     padding-right: 46px;
@@ -64,7 +63,7 @@
     font-weight: 700;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: var(--black-second);
+    color: $black-second;
   }
 
   &__summary {
@@ -74,7 +73,7 @@
     font-weight: 400;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    color: var(--gray);
+    color: $gray;
   }
   &__box:hover &__slider {
     transform: translate(0);
