--- a/sass/utils/_logo.scss
+++ b/sass/utils/_logo.scss
@@ -1,5 +1,5 @@
 .logo--color-footer {
-  color: var(--white);
+  color: $white;
 }
 
 .logo {
@@ -11,10 +11,10 @@
   line-height: 1.19;
   font-weight: 700;
   letter-spacing: 0.03em;
-  color: var(--black);
+  color: $black;
   padding-right: 47px;
 
   &--color {
-    color: var(--blue);
+    color: $blue;
   }
 }
